--- a/modd.conf
+++ b/modd.conf
@@ -13,11 +13,13 @@ magefile_*.go {
 
 modd.conf
 README.*
-*.png
+**/*.png
 *.js
 icons/*.png
 **/*.go
 !mage*.go
-!**/*_test.go {
+!**/*_test.go
+!build/**
+!dist/** {
 	prep +onchange: go test . && mage -v run
 }
