--- a/info.plist
+++ b/info.plist
@@ -803,8 +803,8 @@ variables={allvars}
 				<key>relatedApps</key>
 				<array>
 					<string>com.apple.finder</string>
-					<string>com.sublimetext.4</string>
 					<string>com.cocoatech.PathFinder</string>
+					<string>com.sublimetext.4</string>
 				</array>
 				<key>relatedAppsMode</key>
 				<integer>2</integer>
@@ -1047,7 +1047,7 @@ To add additional directories to scan, use `.stconfig &gt; Edit Config File`.</s
 		<string>VSCODE</string>
 	</array>
 	<key>version</key>
-	<string>3.3.0</string>
+	<string>3.3.0-beta</string>
 	<key>webaddress</key>
 	<string>https://github.com/deanishe/alfred-sublime-text</string>
 </dict>
